--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
           <li>
             <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
           </li>
+          <a href="#" id="close"><i class="bx bx-x"></i></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html" id="lg-bag"><i class="bx bx-shopping-bag"></i></a>
+        <i id="bar" class="bx bx-menu"></i>
       </div>
     </section>
 
@@ -86,7 +91,7 @@
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bx-star"></i>
+              <i class="bx bxs-star"></i>
             </div>
             <h4>₹399</h4>
           </div>
@@ -95,24 +100,24 @@
         <div class="pro">
           <img src="assets/products/f8.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>MIRCHI FASHION</span>
+            <h5>Printed Satin Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bxs-star"></i>
+              <i class="bx bx-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹99</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/f2.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>HELLCAT</span>
+            <h5>Opaque Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
@@ -120,79 +125,79 @@
               <i class="bx bxs-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹799</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/f3.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>Thomas Scott</span>
+            <h5>Spread Collar Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bx-star"></i>
+              <i class="bx bxs-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹199</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/f4.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>HERE&NOW</span>
+            <h5>Opaque Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bxs-star"></i>
+              <i class="bx bx-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹999</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/f5.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>HELLCAT</span>
+            <h5>Opaque Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bx-star"></i>
+              <i class="bx bxs-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹199</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/f6.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>BAESD</span>
+            <h5>Boys Opaque Formal Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bxs-star"></i>
+              <i class="bx bx-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹299</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/f7.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>KALINI</span>
+            <h5>Trousers</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
@@ -200,7 +205,7 @@
               <i class="bx bxs-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹299</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
@@ -222,8 +227,8 @@
         <div class="pro">
           <img src="assets/products/n1.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>Mr Bowerbird</span>
+            <h5>Linen Cotton Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
@@ -231,47 +236,47 @@
               <i class="bx bxs-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹999</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/n2.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>The Indian Garage Co</span>
+            <h5>Checked Slim Fit Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bxs-star"></i>
+              <i class="bx bx-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹599</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/n3.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>Thomas Scott</span>
+            <h5>Slim Fit Pure Cotton Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bx-star"></i>
+              <i class="bx bxs-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹199</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/n4.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>THE BEAR HOUSE</span>
+            <h5>Slim Fit Opaque Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
@@ -279,21 +284,21 @@
               <i class="bx bxs-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹99</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/n5.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>Roadster</span>
+            <h5>Chambray Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bx-star"></i>
+              <i class="bx bxs-star"></i>
             </div>
             <h4>₹399</h4>
           </div>
@@ -302,30 +307,30 @@
         <div class="pro">
           <img src="assets/products/n6.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>Roadster</span>
+            <h5>Half Plain Shorts</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bxs-star"></i>
+              <i class="bx bx-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹699</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
         <div class="pro">
           <img src="assets/products/n7.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>Campus Sutra</span>
+            <h5>Spread Collar Casual Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
-              <i class="bx bx-star"></i>
+              <i class="bx bxs-star"></i>
             </div>
             <h4>₹399</h4>
           </div>
@@ -334,8 +339,8 @@
         <div class="pro">
           <img src="assets/products/n8.jpg" alt="" />
           <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
+            <span>Thomas Scott</span>
+            <h5>Slim Fit Pure Cotton Shirt</h5>
             <div class="start">
               <i class="bx bxs-star"></i>
               <i class="bx bxs-star"></i>
@@ -343,7 +348,7 @@
               <i class="bx bxs-star"></i>
               <i class="bx bx-star"></i>
             </div>
-            <h4>₹399</h4>
+            <h4>₹99</h4>
           </div>
           <a href="#" class="cart"><i class="bx bx-cart"></i></a>
         </div>
@@ -365,5 +370,91 @@
         <button class="white">Collections</button>
       </div>
     </section>
+
+    <!-- !banner 3 -->
+    <section id="banner3">
+      <div class="banner-box">
+        <h2>SEASONAL SALE</h2>
+        <h3>Winter Collection -50% OFF</h3>
+      </div>
+      <div class="banner-box banner-box2">
+        <h2>NEW FOOTWEAR COLLECTION</h2>
+        <h3>Spring/Summer 2022</h3>
+      </div>
+      <div class="banner-box banner-box3">
+        <h2>T-SHIRTS</h2>
+        <h3>New Trendy Prints</h3>
+      </div>
+    </section>
+
+    <!-- !newsletter  -->
+    <section id="newsletter" class="section-p1 section-m1">
+      <div class="newstext">
+        <h4>Sign-Up for Newsletter</h4>
+        <p>
+          Get E-mail updates about our latest shop and
+          <span>Special Offers</span>
+        </p>
+      </div>
+      <div class="form">
+        <input type="text" placeholder="Your email Address" />
+        <button>Sign Up</button>
+      </div>
+    </section>
+
+    <!-- !footer  -->
+    <footer class="section-p1">
+      <div class="col">
+        <img src="assets/logo.png" class="logo" alt="" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Address: </strong> 562 Wellingoton Road, Street 32, San
+          francisco
+        </p>
+        <p><strong>Phone: </strong>+01 2222 365 / (+91) 01 2345 6789</p>
+        <p><strong>Hours: </strong>10:00 - 18:00, Mon - Sat</p>
+
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="bx bxl-facebook-circle"></i>
+            <i class="bx bxl-twitter"></i>
+            <i class="bx bxl-instagram"></i>
+            <i class="bx bxl-pinterest"></i>
+            <i class="bx bxl-youtube"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <h4>About</h4>
+        <a href="#">About us</a>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact us</a>
+      </div>
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#">View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+          <img src="assets/pay/app.jpg" alt="" />
+          <img src="assets/pay/play.jpg" alt="" />
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="assets/pay/pay.png" alt="" />
+      </div>
+      <div class="copyright">&#169; 2021, Vatshal Negi- E-Commerce Website</div>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
